[workspace]
members = ["orchestrator", "cosmos_gravity", "ethereum_gravity", "gravity_utils", "proto_build", "test_runner", "gravity_proto", "relayer", "gbt", "metrics_exporter", "mergravity"]
default-members = ["mergravity"]

[patch.crates-io]
deep_space = { git = "https://github.com/merlion-zone/deep_space", branch = "main-merlion" }
